# onestep-web

./: .gitignore  README.md  docker-compose.connectors.yml  pyproject.toml
.gstack/qa-reports/: baseline.json  delete-generated-pipeline-results.json  drag-qa-results.json  invalid-start-results.json  logs-drawer-results.json  qa-report-onestep-web-2026-06-14.md  quick-initial.json  rapid-qa-results.json
docs/superpowers/plans/: 2026-06-13-onestep-web-ui.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  CredentialManager.tsx  LogsPanel.tsx  NodePalette.test.tsx  NodePalette.tsx  PipelineEditor.test.ts  PipelineEditor.tsx  PropertyPanel.test.tsx  PropertyPanel.tsx  api.ts  main.tsx  styles.css  templates.ts  types.ts
frontend/src/test/: setup.ts
scripts/: run-connector-integration.sh
src/onestep_web/: api.py  cli.py  compiler.py  connectors.py  credentials.py  db.py  debug.py  exporter.py  main.py  models.py  onestep_adapter.py  runtime.py  schemas.py  settings.py
tests/: conftest.py  helpers.py  test_api.py  test_compiler.py  test_connector_integration.py  test_credentials.py  test_debug.py  test_exporter.py  test_imports.py  test_onestep_adapter.py
