[project]
name = "onestep-web"
version = "0.1.0"
description = "Visual pipeline builder for OneStep"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "aiomysql>=0.2.0",
  "aio-pika>=9.0.0",
  "boto3>=1.34.0",
  "cryptography>=42.0.0",
  "fastapi>=0.115.0",
  "greenlet>=3.0.0",
  "httpx>=0.27.0",
  "onestep[mysql,rabbitmq,redis,sqs,yaml]",
  "onestep-postgres",
  "pydantic>=2.8.0",
  "PyYAML>=6.0",
  "python-multipart>=0.0.9",
  "redis>=4.2.0",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[project.scripts]
onestep-web = "onestep_web.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
onestep = { path = "../onestep", editable = true }
onestep-postgres = { path = "../onestep/plugins/onestep-postgres", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests that require local Docker connector services",
]

[tool.ruff]
line-length = 100
target-version = "py312"
